mdapi/objects/User_Time_Off__c.object
<CustomObject>
    <description>Used for tracking when a user is unavailable. Specifically designed for Auto-Assignment but could be used for general calendar displays</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Time Off Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Off_Explanation__c</fullName>
        <inlineHelpText>An area to elaborate on the reason the tech will be pulled from the queue for the date duration selected</inlineHelpText>
        <label>Time Off Explanation</label>
        <type>TextArea</type>
    </fields>
    <label>User Time Off</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Time_Off_Explanation__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UTO-{00000}</displayFormat>
        <label>Time Off Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Time Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>